# sury-app

./: .gitignore  index2.html  package-lock.json  package.json  style2.css  tailwind.config.js  vite.config.js
backend/: Cargo.toml  sury.db
backend/sql/: init.sql
backend/src/: main.rs
frontend/public/: editor.html  index.html  main.js  style.css
